--- a/.github/workflow/main.yaml
+++ b/.github/workflow/main.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Build, Tag, and Push MySQL Docker Image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}  
-          ECR_REPOSITORY: mysql-repo
+          ECR_REPOSITORY: sql-repo
           IMAGE_TAG: Darshan
         run: |
           cd mysql
